--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -9,7 +9,7 @@
                 <img src="/img/cart-is-empty.png" class="mx-auto w-60 mb-4" alt="Empty Cart">
 
                 <a href="/products"
-                    class="inline-block px-6 py-2 bg-yellow-400 text-black rounded hover:bg-yellow-500 transition">
+                    class="inline-block px-6 py-2 bg-yellow-400 text-black rounded-lg hover:bg-yellow-500 transition">
                     Go to Shop
                 </a>
             </div>
@@ -66,7 +66,7 @@
 
 
                         <div>
-                            <a href="/products" class="inline-block px-6 py-2 border rounded hover:bg-gray-100">
+                            <a href="/products" class="inline-block px-6 py-2 rounded-lg bg-yellow-500 hover:bg-yellow-600 font-sans">
                                 Back to Shop
                             </a>
                         </div>
